# Single-cell_RNA-seq_Analysis

./: .gitignore  INSTALLATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md  environment.yml  install_dependencies.sh  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  test_imports.py
dataset/: datasetprocessing.py
examples/: pbmc_complete_analysis.py  visualize_pbmc_clusters.py
lightning_logs/version_1/: metrics.csv
lightning_logs/version_2/: hparams.yaml  metrics.csv
lightning_logs/version_3/: metrics.csv
models/: analyzer.py  scVAE.py  visualization
src/: __init__.py
src/data/: __init__.py  dataset.py  pbmc_loader.py  preprocessing.py
src/models/: __init__.py  analyzer.py  scvae.py
src/visualization/: __init__.py  plots.py
tests/: test_imports.py
